# funbot

./: .gitignore  Cargo.toml  README.md  a.json  err.json  plugin.toml  test.txt
.github/workflows/: rust-clippy.yml
.obsidian/: workspace.json
codegen/: Cargo.toml
codegen/src/: lib.rs
crawl/: github.py  hello.py  requirements.txt  test.py
funbot/: Cargo.toml
funbot/src/: lib.rs  main.rs  make_it_quote.rs  plugin.toml  quote.rs
funbot/src/blive/: blive.rs  mod.rs
funbot/src/echo/: echo.rs  mod.rs  plugin.rs
funbot/src/festival/: festival.rs  mod.rs
funbot/src/make_it_quote/: make_it_quote.rs  mod.rs
funbot/src/openai/: chatgpt.rs  daily.rs  huggingface.rs  mod.rs  openai.rs  tts.rs
funbot/src/quote/: kfc.json  mod.rs  quote.rs  txt.rs
funbot/src/weather/: mod.rs  weather.rs
rustqq/: Cargo.toml
rustqq/src/: lib.rs
rustqq/src/app/: app.rs  async_job.rs  mod.rs  service.rs
rustqq/src/client/: api.rs  message.rs  mod.rs
rustqq/src/event/: events.rs  mod.rs  reply_trait.rs
rustqq/src/server/: mod.rs  server.rs
