[package]
name = "funbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustqq={path = "../rustqq"}
actix-web = "4.0.0-beta.8"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
reqwest = "0.11.3"