[package]
name = "funbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustqq={path = "../rustqq"}
actix-web = "4.0.0-beta.8"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
reqwest = { version = "0.11.4", features = ["json","gzip"] }
rand = "0.8.3"
image = { version = "0.24.5", default-features = false, features = ["jpeg", "png", "gif"] }
imageproc = "0.23.0"
rusttype = "0.9.3"
regex = "1.7.0"
tokio = { version = "1.0.2", features = ["full","macros"] }
scraper = "0.14.0"
mysql_async = "0.31.2"
tiktoken-rs ="0.1.0"
anyhow = "1.0.40"
log ="0.4.17"
pretty_env_logger = "0.4"