[package]
name = "funbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustqq={path = "../rustqq"}
actix-web = "4.0.0-beta.8"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
reqwest = { version = "0.11.4", features = ["json","gzip"] }
rand = "0.8.3"
image = { version = "0.24.5", default-features = false, features = ["jpeg", "png", "gif"] }
imageproc = "0.23.0"
rusttype = "0.9.3"
regex = "1.7.0"
tokio = { version = "1.0.2", features = ["full","macros"] }
scraper = "0.14.0"
tiktoken-rs ={version="0.4.2",features =["async-openai"]}
anyhow = "1.0.40"
log ="0.4.17"
colored = "2.0.0"
thiserror = "1.0.26"
sqlx = { version = "0.6.3", features = ["postgres","macros","runtime-actix-native-tls","offline"] }
async-openai = "0.10.3"
fern={version="0.6.0",features=["colored"]}
chrono = { version = "0.4.19"}
uuid="1.3.0"
