[package]
name = "rustqq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.13", features = ["json","blocking"] }
tokio = { version = "1.22.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.147", features = ["derive"] }
#
actix-web = { version = "4.0.0-beta.8", features = ["rustls"] }
async-trait="0.1.51"
codegen={path="../codegen"}
dyn-clone="1.0.4"
toml="0.5.8"
cron="0.12.0"
chrono="0.4.19"
uuid={version="1.2.2",features=["v4"]}
regex="1.5.4"